# ruby-native-statistics

./: .gitignore  .travis.yml  Cargo.toml  Gemfile  README.md  Rakefile  changelog.md  ruby_native_statistics.gemspec
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: branch-protection.yaml  continuous-delivery.yaml  main.yml
ext/dispersion/: dispersion.c  dispersion.h  extconf.rb
ext/mathematics/: extconf.rb  mathematics.c  mathematics.h
ext/ruby_native_statistics/: Cargo.toml  build.rs  conversions.c  conversions.h  dispersion.c  dispersion.h  extconf.rb  mathematics.c  mathematics.h  ruby_native_statistics.c  ruby_native_statistics.h
ext/ruby_native_statistics/src/: dispersion.rs  lib.rs  mathematics.rs
lib/: ruby_native_statistics.rb
lib/ruby_native_statistics/: version.rb
test/: dispersion_test.rb  mathematics_test.rb  ruby_native_statistics_benchmark.rb  test_helper.rb
