[package]
name = "ruby_native_statistics"
version = "2.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
rb-sys-env = "0.2"

[dev-dependencies]
rb-sys-env = { version = "0.1" }
rb-sys-test-helpers = { version = "0.2" }

[dependencies]
magnus = { version = "0.7.1" }
rb-sys = "0.9.116"
thiserror = "2.0.12"
