[package]
name = "ruby_native_statistics"
version = "2.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
rb-sys-env = "0.2"

[dev-dependencies]
rb-sys-env = { version = "0.2" }
rb-sys-test-helpers = { version = "0.3" }

[dependencies]
magnus = { version = "0.8.2" }
rb-sys = "0.9.124"
thiserror = "2.0.18"
